# alfred-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: AFU_BRAIN.md  AFU_BRAIN_EVOLUTION_SPEC.md  AFU_SKILL_RUNTIME.md  ARCHITECTURE.md  OPEN_SOURCE_BOUNDARY.md  PARALLEL_CLAW.md  PARALLEL_CLAW_FULL_NOTES.md  PRODUCT_STORY.md  RELEASE_CHECKLIST.md  SECURITY_AND_PRIVACY.md  SYSTEM_HANDOFF.md  UNIFIED_ARCHITECTURE_NOTES.md  VOICE_TTS_HANDOFF.md  X_LAUNCH_POSTS.md
examples/: demo.py
schemas/: alfred_event.schema.json  brain_decision.schema.json  parallel_run.schema.json  worker_result.schema.json
scripts/: scan_secrets.sh
src/alfred_system/: __init__.py  brain.py  cli.py  file_memory.py  parallel_claw.py  schemas.py  workers.py
web/: alfred-morning-brief-demo.html  local-tts-config.example.js
